--- a/index.html
+++ b/index.html
@@ -1345,6 +1345,14 @@ body{
     padding-bottom: 12px;
     font-size: 22px;
   }
+
+      .get-conditions-wrapper{
+    padding: 0;
+  }
+
+  .special-for-studios-wrapper{
+    padding: 0;
+  }
 }
 
 @media(max-width: 477px){
