--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@ html, body {
     <header class="header">
         <div class="container">
             <div class="header-logo-wrapper">
-                <img src="/assets/logo.png" alt="" class="header-logo">
+                <img src="assets/logo.png" alt="" class="header-logo">
                 <div class="burger" id="burger-menu">
                   <span></span>
                   <span></span>
@@ -935,7 +935,7 @@ html, body {
   <div class="promo-swiper swiper">
     <div class="swiper-wrapper">
       <!-- Slide 1 -->
-      <div class="swiper-slide" style="background-image: url('/assets/background.jpeg');">
+      <div class="swiper-slide" style="background-image: url('assets/background.jpeg');">
         <div class="promo-main-wrapper">
           <p class="promo-main">
             <span class="promo-main-title">
@@ -952,7 +952,7 @@ html, body {
         </div>
       </div>
       <!-- Slide 2 -->
-      <div class="swiper-slide" style="background-image: url('/assets/background2.jpeg');">
+      <div class="swiper-slide" style="background-image: url('assets/background2.jpeg');">
         <div class="special-for-studios-wrapper">
           <div class="special-for-studios">
             <p class="for-studios">
