--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@ html, body {
     <header class="header">
         <div class="container">
             <div class="header-logo-wrapper">
-                <img src="/assets/logo.png" alt="" class="header-logo">
+                <img src="assets/logo.png" alt="" class="header-logo">
                 <div class="burger" id="burger-menu">
                   <span></span>
                   <span></span>
@@ -1428,7 +1428,7 @@ html, body {
   <div class="promo-swiper swiper">
     <div class="swiper-wrapper">
       <!-- Slide 1 -->
-      <div class="swiper-slide" style="background-image: url('/assets/background.jpeg');">
+      <div class="swiper-slide" style="background-image: url('assets/background.jpeg');">
         <div class="promo-main-wrapper">
           <p class="promo-main">
             <span class="promo-main-title">
@@ -1445,7 +1445,7 @@ html, body {
         </div>
       </div>
       <!-- Slide 2 -->
-      <div class="swiper-slide" style="background-image: url('/assets/background2.jpeg');">
+      <div class="swiper-slide" style="background-image: url('assets/background2.jpeg');">
         <div class="special-for-studios-wrapper">
           <div class="special-for-studios">
             <p class="for-studios">
@@ -1488,7 +1488,7 @@ html, body {
                         </ul>
                     </div>
                     <div class="add-button-wrapper">
-                        <a class="add-button product-button no-style-link" href="/website/clays/venus/venus.html">купить</a>
+                        <a class="add-button product-button no-style-link" href="venus.html">купить</a>
                         <a class="about-clay-button product-button no-style-link" href="">подробнее</a>
                     </div>
                 </div>
@@ -1512,7 +1512,7 @@ html, body {
                         </ul>
                     </div>
                     <div class="add-button-wrapper">
-                        <a class="add-button product-button no-style-link" href="/website/clays/mars/mars.html">купить</a>
+                        <a class="add-button product-button no-style-link" href="mars.html">купить</a>
                         <a class="about-clay-button product-button no-style-link" href="">подробнее</a>
                     </div>
                 </div>
@@ -1536,7 +1536,7 @@ html, body {
                         </ul>
                     </div>
                     <div class="add-button-wrapper">
-                        <a class="add-button product-button no-style-link" href="/website/clays/jupiter/jupiter.html">купить</a>
+                        <a class="add-button product-button no-style-link" href="jupiter.html">купить</a>
                         <a class="about-clay-button product-button no-style-link" href="">подробнее</a>
                     </div>
                 </div>
