--- a/jupiter.html
+++ b/jupiter.html
@@ -640,7 +640,7 @@ body{
     <header class="header">
         <div class="container">
             <div class="header-logo-wrapper">
-                <img src="/assets/logo.png" alt="" class="header-logo">
+                <img src="logo.png" alt="" class="header-logo">
             </div>
             <div class="nav-header-wrapper">
                     <ul class="ul-header">
